[gd_scene load_steps=8 format=3 uid="uid://csm3xijn7cq8x"]

[ext_resource type="Material" uid="uid://brnrqci7qbxdq" path="res://meshes/materials/Wood.tres" id="1_8unng"]
[ext_resource type="Script" path="res://src/pressure_plate.gd" id="1_q65bg"]
[ext_resource type="Material" uid="uid://d1d4nt5nnih7u" path="res://meshes/materials/WallHighContranst.001.tres" id="2_o2t3a"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ntv65"]
friction = 0.33

[sub_resource type="ArrayMesh" id="ArrayMesh_lwd0g"]
_surfaces = [{
"aabb": AABB(-1.07072, -0.0011213, -1.07072, 2.14145, 0.141668, 2.14145),
"format": 4097,
"index_count": 54,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 3, 0, 7, 0, 2, 0, 3, 0, 6, 0, 7, 0, 2, 0, 5, 0, 1, 0, 2, 0, 7, 0, 5, 0, 4, 0, 9, 0, 8, 0, 4, 0, 6, 0, 9, 0, 3, 0, 11, 0, 10, 0, 3, 0, 0, 0, 11, 0, 6, 0, 10, 0, 9, 0, 6, 0, 3, 0, 10, 0, 0, 0, 8, 0, 11, 0, 0, 0, 4, 0, 8, 0),
"name": "Wood",
"primitive": 3,
"vertex_count": 12,
"vertex_data": PackedByteArray(10, 255, 99, 191, 190, 232, 15, 62, 10, 255, 99, 191, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 191, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 63, 10, 255, 99, 191, 190, 232, 15, 62, 12, 255, 99, 63, 12, 255, 99, 63, 190, 232, 15, 62, 10, 255, 99, 191, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 191, 12, 255, 99, 63, 190, 232, 15, 62, 12, 255, 99, 63, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 63, 85, 80, 70, 63, 210, 30, 169, 61, 85, 80, 70, 191, 85, 80, 70, 63, 210, 30, 169, 61, 83, 80, 70, 63, 84, 80, 70, 191, 210, 30, 169, 61, 83, 80, 70, 63, 84, 80, 70, 191, 210, 30, 169, 61, 85, 80, 70, 191)
}, {
"aabb": AABB(-0.774663, 0.0825783, -0.774663, 1.54934, 9.99868e-06, 1.54934),
"format": 4097,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0),
"name": "WallHighContranst.001",
"primitive": 3,
"vertex_count": 4,
"vertex_data": PackedByteArray(85, 80, 70, 63, 210, 30, 169, 61, 83, 80, 70, 63, 85, 80, 70, 63, 210, 30, 169, 61, 85, 80, 70, 191, 84, 80, 70, 191, 210, 30, 169, 61, 85, 80, 70, 191, 84, 80, 70, 191, 210, 30, 169, 61, 83, 80, 70, 63)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_00wcb"]
resource_name = "Mesh_PreasurePlate_Cube127"
_surfaces = [{
"aabb": AABB(-1.07072, -0.0011213, -1.07072, 2.14145, 0.141668, 2.14145),
"attribute_data": PackedByteArray(0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 0, 62, 0, 0, 128, 62, 0, 0, 0, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63),
"format": 4119,
"index_count": 54,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0),
"material": ExtResource("1_8unng"),
"name": "Wood",
"primitive": 3,
"vertex_count": 36,
"vertex_data": PackedByteArray(10, 255, 99, 191, 190, 232, 15, 62, 10, 255, 99, 191, 165, 71, 165, 199, 182, 175, 194, 210, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 191, 165, 71, 165, 199, 238, 173, 15, 210, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 63, 165, 71, 165, 199, 50, 216, 177, 230, 10, 255, 99, 191, 190, 232, 15, 62, 12, 255, 99, 63, 165, 71, 165, 199, 222, 219, 7, 233, 12, 255, 99, 63, 190, 232, 15, 62, 10, 255, 99, 191, 89, 184, 255, 255, 62, 85, 194, 210, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 191, 89, 184, 255, 255, 16, 82, 15, 210, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 191, 89, 184, 255, 255, 151, 165, 229, 211, 10, 255, 99, 191, 190, 232, 15, 62, 10, 255, 99, 191, 89, 184, 255, 255, 238, 173, 15, 210, 12, 255, 99, 63, 190, 232, 15, 62, 12, 255, 99, 63, 89, 184, 165, 199, 135, 37, 35, 232, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 63, 89, 184, 165, 199, 32, 36, 7, 233, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 191, 89, 184, 165, 199, 100, 77, 229, 211, 12, 255, 99, 63, 190, 232, 15, 62, 10, 255, 99, 191, 89, 184, 165, 199, 16, 82, 15, 210, 10, 255, 99, 191, 190, 232, 15, 62, 12, 255, 99, 63, 255, 127, 165, 199, 119, 218, 158, 234, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 63, 255, 127, 165, 199, 222, 219, 7, 233, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 63, 255, 127, 165, 199, 204, 39, 51, 237, 12, 255, 99, 63, 190, 232, 15, 62, 12, 255, 99, 63, 255, 127, 165, 199, 32, 36, 7, 233, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 63, 255, 127, 0, 0, 255, 255, 255, 191, 121, 13, 137, 191, 128, 248, 146, 186, 121, 13, 137, 191, 255, 127, 0, 0, 255, 255, 255, 191, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 191, 255, 127, 0, 0, 255, 255, 255, 191, 121, 13, 137, 63, 128, 248, 146, 186, 121, 13, 137, 63, 255, 127, 0, 0, 255, 255, 255, 191, 12, 255, 99, 63, 190, 232, 15, 62, 10, 255, 99, 191, 86, 85, 86, 213, 255, 255, 255, 191, 85, 80, 70, 63, 210, 30, 169, 61, 85, 80, 70, 191, 86, 85, 86, 213, 255, 255, 255, 191, 85, 80, 70, 63, 210, 30, 169, 61, 83, 80, 70, 63, 86, 85, 86, 213, 255, 255, 255, 191, 12, 255, 99, 63, 190, 232, 15, 62, 12, 255, 99, 63, 86, 85, 86, 213, 255, 255, 255, 191, 10, 255, 99, 191, 190, 232, 15, 62, 12, 255, 99, 63, 168, 170, 86, 213, 255, 255, 255, 191, 84, 80, 70, 191, 210, 30, 169, 61, 83, 80, 70, 63, 168, 170, 86, 213, 255, 255, 255, 191, 84, 80, 70, 191, 210, 30, 169, 61, 85, 80, 70, 191, 168, 170, 86, 213, 255, 255, 255, 191, 10, 255, 99, 191, 190, 232, 15, 62, 10, 255, 99, 191, 168, 170, 86, 213, 255, 255, 255, 191, 12, 255, 99, 63, 190, 232, 15, 62, 12, 255, 99, 63, 168, 170, 255, 255, 255, 255, 255, 191, 85, 80, 70, 63, 210, 30, 169, 61, 83, 80, 70, 63, 168, 170, 255, 255, 255, 255, 255, 191, 84, 80, 70, 191, 210, 30, 169, 61, 83, 80, 70, 63, 168, 170, 255, 255, 255, 255, 255, 191, 10, 255, 99, 191, 190, 232, 15, 62, 12, 255, 99, 63, 168, 170, 255, 255, 255, 255, 255, 191, 10, 255, 99, 191, 190, 232, 15, 62, 10, 255, 99, 191, 255, 127, 86, 213, 255, 255, 255, 63, 84, 80, 70, 191, 210, 30, 169, 61, 85, 80, 70, 191, 255, 127, 86, 213, 255, 255, 255, 63, 85, 80, 70, 63, 210, 30, 169, 61, 85, 80, 70, 191, 255, 127, 86, 213, 255, 255, 255, 63, 12, 255, 99, 63, 190, 232, 15, 62, 10, 255, 99, 191, 255, 127, 86, 213, 255, 255, 255, 63)
}, {
"aabb": AABB(-0.774663, 0.0825783, -0.774663, 1.54934, 9.99868e-06, 1.54934),
"attribute_data": PackedByteArray(0, 0, 44, 62, 0, 0, 32, 62, 0, 0, 44, 62, 0, 0, 170, 62, 0, 0, 176, 62, 0, 0, 170, 62, 0, 0, 176, 62, 0, 0, 32, 62),
"format": 4119,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0),
"material": ExtResource("2_o2t3a"),
"name": "WallHighContranst.001",
"primitive": 3,
"vertex_count": 4,
"vertex_data": PackedByteArray(85, 80, 70, 63, 210, 30, 169, 61, 83, 80, 70, 63, 255, 127, 255, 255, 0, 0, 255, 191, 85, 80, 70, 63, 210, 30, 169, 61, 85, 80, 70, 191, 255, 127, 255, 255, 0, 0, 255, 191, 84, 80, 70, 191, 210, 30, 169, 61, 85, 80, 70, 191, 255, 127, 255, 255, 0, 0, 255, 191, 84, 80, 70, 191, 210, 30, 169, 61, 83, 80, 70, 63, 255, 127, 255, 255, 0, 0, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_lwd0g")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b22pe"]
points = PackedVector3Array(0.89, 0.152, -0.89, 1.08768, -0.0180786, -1.0877, -1.0877, -0.0180786, -1.0877, -0.89, 0.152, 0.89, -0.89, 0.152, -0.89, 0.89, 0.152, 0.89, -1.0877, -0.0180786, 1.0877, 1.08768, -0.0180786, 1.0877)

[node name="PressurePlate" type="Node3D"]
script = ExtResource("1_q65bg")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0409858, 0)
collision_layer = 3
collision_mask = 2
mass = 8.0
physics_material_override = SubResource("PhysicsMaterial_ntv65")
gravity_scale = 0.0
lock_rotation = true
constant_force = Vector3(0, 16, 0)

[node name="Cube079" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("ArrayMesh_00wcb")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0442684, 0)
shape = SubResource("ConvexPolygonShape3D_b22pe")

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="."]
node_a = NodePath("../RigidBody3D")
linear_limit_x/restitution = 0.8
linear_limit_y/upper_distance = 0.08
linear_limit_z/restitution = 0.8

[node name="DebounceOn" type="Timer" parent="."]
wait_time = 0.24
one_shot = true

[node name="DebounceOff" type="Timer" parent="."]
wait_time = 0.24
one_shot = true

[connection signal="timeout" from="DebounceOn" to="." method="_on_debounce_on_timeout"]
[connection signal="timeout" from="DebounceOff" to="." method="_on_debounce_off_timeout"]
